(feat) : add amharic to supported languages

--- a/packages/esm-active-visits-app/translations/am.json
+++ b/packages/esm-active-visits-app/translations/am.json
@@ -1,37 +1,37 @@
 {
-  "activeVisits": "Active Visits",
-  "age": "Age",
-  "allEncounters": "All Encounters",
-  "checkFilters": "Check the filters above",
-  "diagnoses": "Diagnoses",
-  "dose": "Dose",
-  "encounterType": "Encounter Type",
-  "endDate": "End date",
-  "filterTable": "Filter table",
-  "gender": "Gender",
-  "idNumber": "ID Number",
-  "indication": "Indication",
-  "medications": "Medications",
-  "name": "Name",
-  "noActiveVisitsForLocation": "There are no active visits to display for this location.",
-  "noDiagnosesFound": "No diagnoses found",
-  "noEncountersFound": "No encounters found",
-  "noMedicationsFound": "No medications found",
+  "activeVisits": "ገባሪ ጉብኝቶች",
+  "age": "ዕድሜ",
+  "allEncounters": "ሁሉም ግጥሚያዎች",
+  "checkFilters": "ከላይ ያሉትን ማጣሪያዎች ያረጋግጡ",
+  "diagnoses": "ምርመራዎች",
+  "dose": "መጠን",
+  "encounterType": "የግጥሚያ አይነት",
+  "endDate": "የማብቂያ ቀን",
+  "filterTable": "ሠንጠረዥ አጣራ",
+  "idNumber": "መለያ ቁጥር",
+  "indication": "አመላካች",
+  "medications": "መድሃኒቶች",
+  "name": "ስም",
+  "noActiveVisitsForLocation": "ለዚህ ቦታ የሚታዩ ገባሪ ጉብኝቶች የሉም።",
+  "noDiagnosesFound": "ምንም ምርመራዎች አልተገኙም።",
+  "noEncountersFound": "ምንም ግጥሚያዎች አልተገኙም።",
+  "noMedicationsFound": "ምንም መድሃኒቶች አልተገኙም።",
   "noNotesToShowForPatient": "No hay notas para mostrar de este paciente",
-  "noObservationsFound": "No observations found",
-  "notes": "Notes",
-  "noVisitsToDisplay": "No visits to display",
-  "orderDurationAndUnit": "for {{duration}} {{durationUnit}}",
-  "orderIndefiniteDuration": "Indefinite duration",
-  "patients": "Patients",
-  "provider": "Provider",
-  "quantity": "Quantity",
-  "refills": "Refills",
-  "tests": "Tests",
-  "thereIsNoInformationToDisplayHere": "There is no information to display here",
-  "time": "Time",
-  "totalVisits": "Total Visits Today",
-  "visitStartTime": "Visit Time",
-  "visitSummary": "Visit Summary",
-  "visitType": "Visit Type"
+  "noObservationsFound": "ምንም ምልከታዎች አልተገኙም።",
+  "notes": "ማስታወሻዎች",
+  "noVisitsToDisplay": "የሚታዩ ጉብኝቶች የሉም",
+  "orderDurationAndUnit": "ለ {{duration}} {{durationUnit}}",
+  "orderIndefiniteDuration": "ላልተወሰነ ጊዜ",
+  "patients": "ታካሚዎች",
+  "provider": "አቅራቢ",
+  "quantity": "ብዛት",
+  "refills": "መሙላት",
+  "sex": "ጾታ",
+  "tests": "ምርመራዎች",
+  "thereIsNoInformationToDisplayHere": "እዚህ ለማሳየት ምንም መረጃ የለም።",
+  "time": "ሰዓት",
+  "totalVisits": "ጠቅላላ የዛሬ ጉብኝቶች",
+  "visitStartTime": "የጉብኝት ሰዓት",
+  "visitSummary": "የጉብኝት ማጠቃለያ",
+  "visitType": "የጉብኝት አይነት"
 }
