--- a/packages/esm-appointments-app/translations/am.json
+++ b/packages/esm-appointments-app/translations/am.json
@@ -1,168 +1,168 @@
 {
-  "action": "Action",
-  "actions": "Actions",
-  "add": "Add",
-  "age": "Age",
-  "allDay": "All day",
-  "appointmentCancelError": "Error cancelling appointment",
-  "appointmentCancelled": "Appointment Cancelled",
-  "appointmentCancelledSuccessfully": "Appointment cancelled successfully",
-  "appointmentCheckedIn": "Appointment Checked In",
-  "appointmentColor": "Appointment color",
-  "appointmentConflict": "Appointment conflict",
-  "appointmentEdited": "Appointment edited",
-  "appointmentEditError": "Error editing appointment",
-  "appointmentEnded": "Appointment ended",
-  "appointmentEndedAndVisitClosedSuccessfully": "Appointment successfully ended and visit successfully closed",
-  "appointmentEndedButVisitNotClosedError": "Appointment ended, but error closing visit",
-  "appointmentEndedSuccessfully": "Appointment successfully ended.",
-  "appointmentEndError": "Error ending appointment",
-  "appointmentFormError": "Error scheduling appointment",
-  "appointmentHistory": "Appointment History",
-  "appointmentMarkedChecked": "Appointment marked as Checked In",
-  "appointmentMetrics": "Appointment metrics",
-  "appointmentMetricsLoadError": "",
-  "appointmentNoteLabel": "Write an additional note",
-  "appointmentNotePlaceholder": "Write any additional points here",
-  "appointmentNotes": "Appointment Notes",
-  "appointmentNowVisible": "It is now visible on the Appointments page",
-  "appointments": "Appointments",
-  "Appointments": "Appointments",
-  "appointments_lower": "appointments",
-  "appointmentsCalendar": "Appointments calendar",
-  "appointmentScheduled": "Appointment scheduled",
-  "appointmentService": "Appointment service",
-  "appointmentServiceCreate": "Appointment service created successfully",
-  "appointmentServiceName": "Appointment service name",
-  "appointmentsScheduledForToday": "appointments scheduled for today",
-  "appointmentsTable": "Appointments table",
-  "appointmentStatus": "Appointment status",
-  "appointmentToFulfill": "Select appointment to fulfill",
-  "appointmentType": "Appointment type",
-  "appointmentType_title": "Appointment Type",
-  "back": "Back",
-  "calendar": "Calendar",
-  "cameEarly": "Came early",
-  "cancel": "Cancel",
-  "cancelAppointment": "Cancel Appointment",
-  "cancelAppointmentModalConfirmationText": "Are you sure you want to cancel this appointment?",
-  "cancelled": "Cancelled",
-  "checkedIn": "Checked in",
-  "checkedOut": "Checked out",
-  "checkFilters": "Check the filters above",
-  "checkIn": "Check In",
-  "checkOut": "Check out",
-  "chooseAppointmentType": "Choose appointment type",
-  "chooseLocation": "Choose a location",
-  "chooseProvider": "Choose a provider",
-  "chooseService": "Select service",
-  "completed": "Completed",
-  "Contact": "Contact {{index}}",
-  "countMore_one": "{{count}} more",
-  "countMore_other": "{{count}} more",
-  "createAppointmentService": "Create appointment service",
-  "createNewAppointment": "Create new appointment",
-  "date": "Date",
-  "date&Time": "Date & time",
-  "dateAppointmentIssuedCannotBeAfterAppointmentDate": "Date appointment issued cannot be after the appointment date",
-  "dateOfBirth": "Date of birth",
-  "dateScheduled": "Date appointment issued",
-  "dateScheduledDetail": "Date appointment issued",
-  "dateTime": "Date & Time",
-  "day": "Day",
-  "daysOfWeek": "Days of the week",
-  "discard": "Discard",
-  "download": "Download",
-  "durationErrorMessage": "Duration should be greater than zero",
-  "durationInMinutes": "Duration (minutes)",
-  "durationMins": "Duration min",
-  "edit": "Edit",
-  "editAppointment": "Edit Appointment",
-  "editAppointments": "Edit Appointment",
-  "emptyStateText": "There are no <1>{{displayText}}</1> to display",
-  "encounters": "Encounters",
-  "encounterType": "Encounter type",
-  "endAppointmentAndVisitConfirmationMessage": "Checking the patient out will mark the appointment as complete, and close out the active visit for this patient.",
-  "endAppointmentConfirmation": "Are you sure you want to check the patient out for this appointment?",
-  "endAppointmentConfirmationMessage": "Checking the patient out will mark the appointment as complete.",
-  "endDate": "End date",
-  "endTime": "End Time",
-  "errorCreatingAppointmentService": "Error creating appointment service",
-  "expected": "Expected",
-  "filterTable": "Filter table",
-  "gender": "Gender",
-  "highestServiceVolume": "Highest volume service: {{time}}",
-  "identifier": "Identifier",
-  "invalidNumber": "Number is not valid",
-  "isRecurringAppointment": "Is this a recurring appointment?",
-  "itemsPerPage": "Items per page",
-  "loading": "Loading",
-  "location": "Location",
-  "medications": "Medications",
-  "missed": "Missed",
-  "next": "Next",
-  "nextMonth": "Next month",
-  "nextPage": "Next page",
-  "no": "No",
-  "noAppointmentsToDisplay": "No appointments to display",
-  "noContent": "No Content",
-  "noCurrentAppointments": "There are no appointments scheduled for today to display for this patient",
-  "noEncountersFound": "No encounters found",
-  "noPastAppointments": "There are no past appointments to display for this patient",
-  "noPreviousVisitFound": "No previous visit found",
-  "notArrived": "Not arrived",
-  "note": "Note",
-  "notes": "Notes",
-  "noUpcomingAppointments": "No upcoming appointments found",
-  "noUpcomingAppointmentsForPatient": "There are no upcoming appointments to display for this patient",
-  "pageNumber": "Page number",
-  "past": "Past",
-  "patientDetails": "Patient details",
-  "patientDoubleBooking": "Patient already booked for an appointment at this time",
-  "patientName": "Patient name",
-  "patients": "Patients",
-  "period": "Period",
-  "prev": "Prev",
-  "previousMonth": "Previous month",
-  "previousPage": "Previous page",
-  "provider": "Provider",
-  "providers": "Providers",
-  "providersBooked": "Providers booked: {{time}}",
-  "recurringAppointment": "Recurring Appointment",
-  "recurringAppointmentShouldHaveEndDate": "A recurring appointment should have an end date",
-  "repeatEvery": "Repeat every",
-  "save": "Save",
-  "saveAndClose": "Save and close",
-  "scheduled": "Scheduled",
-  "scheduledAppointments": "Scheduled appointments",
-  "scheduledForToday": "Scheduled For Today",
-  "selectALocation": "Select a location",
-  "selectAppointmentStatus": "Select status",
-  "selectAppointmentType": "Select an appointment type",
-  "selectLocation": "Select location",
-  "selectOption": "Select an option",
-  "selectProvider": "Select a provider",
-  "selectService": "Select a service",
-  "selectServiceType": "Select service type",
-  "service": "Service",
-  "serviceName": "Service name",
-  "serviceType": "Service Type",
-  "serviceUnavailable": "Appointment time is outside of service hours",
-  "startDate": "Start date",
-  "startTime": "Start Time",
-  "status": "Status",
-  "time": "Time",
-  "today": "Today",
-  "todays": "Today's",
-  "type": "Type",
-  "unscheduled": "Unscheduled",
-  "unscheduledAppointments": "Unscheduled appointments",
-  "unscheduledAppointments_lower": "unscheduled appointments",
-  "upcoming": "Upcoming",
-  "upcomingAppointments": "Upcoming appointments",
-  "updateError": "Error updating upcoming appointment",
-  "view": "View",
-  "vitals": "Vitals",
-  "week": "Week",
-  "yes": "Yes"
+  "action": "እርምጃ",
+  "actions": "እርምጃዎች",
+  "add": "አክል",
+  "age": "ዕድሜ",
+  "allDay": "ሙሉ ቀን",
+  "appointmentCancelError": "የቀጠሮ ስረዛ ላይ ስህተት",
+  "appointmentCancelled": "ቀጠሮ ተሰርዟል",
+  "appointmentCancelledSuccessfully": "ቀጠሮ በተሳካ ሁኔታ ተሰርዟል",
+  "appointmentCheckedIn": "ቀጠሮ ተመዝግቧል",
+  "appointmentColor": "የቀጠሮ ቀለም",
+  "appointmentConflict": "የቀጠሮ ግጭት",
+  "appointmentEdited": "ቀጠሮ ተስተካክሏል",
+  "appointmentEditError": "ቀጠሮን በማስተካከል ላይ ስህተት",
+  "appointmentEnded": "ቀጠሮ አብቅቷል",
+  "appointmentEndedAndVisitClosedSuccessfully": "ቀጠሮ በተሳካ ሁኔታ ተጠናቋል እና ጉብኝት በተሳካ ሁኔታ ተዘግቷል",
+  "appointmentEndedButVisitNotClosedError": "ቀጠሮ አብቅቷል፣ ነገር ግን ጉብኝቱን በመዝጋት ላይ ስህተት",
+  "appointmentEndedSuccessfully": "ቀጠሮ በተሳካ ሁኔታ ተጠናቋል።",
+  "appointmentEndError": "ቀጠሮን በማጠናቀቅ ላይ ስህተት",
+  "appointmentFormError": "ቀጠሮ በማዘጋጀት ላይ ስህተት",
+  "appointmentHistory": "የቀጠሮ ታሪክ",
+  "appointmentMarkedChecked": "ቀጠሮ እንደ ተመዝግቦ ምልክት ተደርጎበታል",
+  "appointmentMetrics": "የቀጠሮ መለኪያዎች",
+  "appointmentMetricsLoadError": "የቀጠሮ መለኪያዎች በመጫን ላይ ስህተት",
+  "appointmentNoteLabel": "ተጨማሪ ማስታወሻ ይጻፉ",
+  "appointmentNotePlaceholder": "እዚህ ማንኛውንም ተጨማሪ ነጥቦችን ይጻፉ",
+  "appointmentNotes": "የቀጠሮ ማስታወሻዎች",
+  "appointmentNowVisible": "አሁን በቀጠሮዎች ገጽ ላይ ይታያል",
+  "appointments": "ቀጠሮዎች",
+  "Appointments": "ቀጠሮዎች",
+  "appointments_lower": "ቀጠሮዎች",
+  "appointmentsCalendar": "የቀጠሮዎች የቀን መቁጠሪያ",
+  "appointmentScheduled": "ቀጠሮ ተይዟል",
+  "appointmentService": "የቀጠሮ አገልግሎት",
+  "appointmentServiceCreate": "የቀጠሮ አገልግሎት በተሳካ ሁኔታ ተፈጥሯል",
+  "appointmentServiceName": "የቀጠሮ አገልግሎት ስም",
+  "appointmentsScheduledForToday": "ለዛሬ የታቀዱ ቀጠሮዎች",
+  "appointmentsTable": "የቀጠሮዎች ሠንጠረዥ",
+  "appointmentStatus": "የቀጠሮ ሁኔታ",
+  "appointmentToFulfill": "ለማሟላት ቀጠሮ ይምረጡ",
+  "appointmentType": "የቀጠሮ አይነት",
+  "appointmentType_title": "የቀጠሮ አይነት",
+  "back": "ተመለስ",
+  "calendar": "የቀን መቁጠሪያ",
+  "cameEarly": "በቶሎ መጣ",
+  "cancel": "ይቅር",
+  "cancelAppointment": "ቀጠሮ ሰርዝ",
+  "cancelAppointmentModalConfirmationText": "ይህን ቀጠሮ መሰረዝ እንደሚፈልጉ እርግጠኛ ነዎት?",
+  "cancelled": "ተሰርዟል",
+  "checkedIn": "ተመዝግቧል",
+  "checkedOut": "ወጥቷል",
+  "checkFilters": "ከላይ ያሉትን ማጣሪያዎች ያረጋግጡ",
+  "checkIn": "ግባ",
+  "checkOut": "ውጣ",
+  "chooseAppointmentType": "የቀጠሮ አይነት ይምረጡ",
+  "chooseLocation": "ቦታ ይምረጡ",
+  "chooseProvider": "አቅራቢ ይምረጡ",
+  "chooseService": "አገልግሎት ይምረጡ",
+  "completed": "ተጠናቋል",
+  "Contact": "ዕውቂያ {{index}}",
+  "countMore_one": "{{count}} ተጨማሪ",
+  "countMore_other": "{{count}} ተጨማሪ",
+  "createAppointmentService": "የቀጠሮ አገልግሎት ፍጠር",
+  "createNewAppointment": "አዲስ ቀጠሮ ፍጠር",
+  "date": "ቀን",
+  "date&Time": "ቀን እና ሰዓት",
+  "dateAppointmentIssuedCannotBeAfterAppointmentDate": "ቀጠሮ የተሰጠበት ቀን ከቀጠሮው ቀን በኋላ ሊሆን አይችልም",
+  "dateOfBirth": "የትውልድ ቀን",
+  "dateScheduled": "ቀጠሮ የተሰጠበት ቀን",
+  "dateScheduledDetail": "ቀጠሮ የተሰጠበት ቀን",
+  "dateTime": "ቀን እና ሰዓት",
+  "day": "ቀን",
+  "daysOfWeek": "የሳምንቱ ቀናት",
+  "discard": "ጣሉ",
+  "download": "አውርድ",
+  "durationErrorMessage": "የቆይታ ጊዜ ከዜሮ በላይ መሆን አለበት",
+  "durationInMinutes": "የቆይታ ጊዜ (ደቂቃዎች)",
+  "durationMins": "የቆይታ ጊዜ ደቂቃ",
+  "edit": "አስተካክል",
+  "editAppointment": "ቀጠሮ አስተካክል",
+  "editAppointments": "ቀጠሮ አስተካክል",
+  "emptyStateText": "ለማሳየት <1>{{displayText}}</1> የለም።",
+  "encounters": "ግጥሚያዎች",
+  "encounterType": "የግጥሚያ አይነት",
+  "endAppointmentAndVisitConfirmationMessage": "ታካሚውን ማስወጣት ቀጠሮውን እንደተጠናቀቀ ምልክት ያደርጋል፣ እና የዚህ ታካሚ ገባሪ ጉብኝትን ይዘጋል።",
+  "endAppointmentConfirmation": "ለዚህ ቀጠሮ ታካሚውን ማስወጣት እንደሚፈልጉ እርግጠኛ ነዎት?",
+  "endAppointmentConfirmationMessage": "ታካሚውን ማስወጣት ቀጠሮውን እንደተጠናቀቀ ምልክት ያደርጋል።",
+  "endDate": "የማብቂያ ቀን",
+  "endTime": "የማብቂያ ሰዓት",
+  "errorCreatingAppointmentService": "የቀጠሮ አገልግሎት በመፍጠር ላይ ስህተት",
+  "expected": "የሚጠበቀው",
+  "filterTable": "ሠንጠረዥ አጣራ",
+  "highestServiceVolume": "ከፍተኛው የአገልግሎት መጠን: {{time}}",
+  "identifier": "መለያ",
+  "invalidNumber": "ቁጥሩ ትክክል አይደለም",
+  "isRecurringAppointment": "ይህ ተደጋጋሚ ቀጠሮ ነው?",
+  "itemsPerPage": "ንጥሎች በገጽ",
+  "loading": "በመጫን ላይ",
+  "location": "ቦታ",
+  "medications": "መድሃኒቶች",
+  "missed": "ያመለጠ",
+  "next": "ቀጣይ",
+  "nextMonth": "ቀጣይ ወር",
+  "nextPage": "ቀጣይ ገጽ",
+  "no": "አይ",
+  "noAppointmentsToDisplay": "የሚታዩ ቀጠሮዎች የሉም",
+  "noContent": "ይዘት የለም",
+  "noCurrentAppointments": "ለዛሬ ለዚህ ታካሚ የሚታዩ ቀጠሮዎች የሉም",
+  "noEncountersFound": "ምንም ግጥሚያዎች አልተገኙም።",
+  "noPastAppointments": "ለዚህ ታካሚ ለማሳየት ያለፉ ቀጠሮዎች የሉም",
+  "noPreviousVisitFound": "ምንም ያለፈ ጉብኝት አልተገኘም።",
+  "notArrived": "አልደረሰም",
+  "note": "ማስታወሻ",
+  "notes": "ማስታወሻዎች",
+  "noUpcomingAppointments": "ምንም መጪ ቀጠሮዎች አልተገኙም።",
+  "noUpcomingAppointmentsForPatient": "ለዚህ ታካሚ የሚታዩ መጪ ቀጠሮዎች የሉም",
+  "pageNumber": "የገጽ ቁጥር",
+  "past": "ያለፈ",
+  "patientDetails": "የታካሚ ዝርዝሮች",
+  "patientDoubleBooking": "ታካሚው ለዚህ ሰዓት ቀድሞውኑ ቀጠሮ ተይዞበታል",
+  "patientName": "የታካሚ ስም",
+  "patients": "ታካሚዎች",
+  "period": "ጊዜ",
+  "prev": "ቀዳሚ",
+  "previousMonth": "የቀደመው ወር",
+  "previousPage": "የቀደመው ገጽ",
+  "provider": "አቅራቢ",
+  "providers": "አቅራቢዎች",
+  "providersBooked": "የተያዙ አቅራቢዎች: {{time}}",
+  "recurringAppointment": "ተደጋጋሚ ቀጠሮ",
+  "recurringAppointmentShouldHaveEndDate": "ተደጋጋሚ ቀጠሮ የመጨረሻ ቀን ሊኖረው ይገባል",
+  "repeatEvery": "በየ",
+  "save": "አስቀምጥ",
+  "saveAndClose": "አስቀምጥ እና ዝጋ",
+  "scheduled": "የታቀደ",
+  "scheduledAppointments": "የታቀዱ ቀጠሮዎች",
+  "scheduledForToday": "ለዛሬ የታቀደ",
+  "selectALocation": "ቦታ ይምረጡ",
+  "selectAppointmentStatus": "ሁኔታ ይምረጡ",
+  "selectAppointmentType": "የቀጠሮ አይነት ይምረጡ",
+  "selectLocation": "ቦታ ይምረጡ",
+  "selectOption": "አማራጭ ይምረጡ",
+  "selectProvider": "አቅራቢ ይምረጡ",
+  "selectService": "አገልግሎት ይምረጡ",
+  "selectServiceType": "የአገልግሎት አይነት ይምረጡ",
+  "service": "አገልግሎት",
+  "serviceName": "የአገልግሎት ስም",
+  "serviceType": "የአገልግሎት አይነት",
+  "serviceUnavailable": "የቀጠሮ ሰዓት ከአገልግሎት ሰዓቶች ውጭ ነው",
+  "sex": "ጾታ",
+  "startDate": "የመጀመሪያ ቀን",
+  "startTime": "የመጀመሪያ ሰዓት",
+  "status": "ሁኔታ",
+  "time": "ሰዓት",
+  "today": "ዛሬ",
+  "todays": "የዛሬ",
+  "type": "አይነት",
+  "unscheduled": "ያልታቀደ",
+  "unscheduledAppointments": "ያልታቀዱ ቀጠሮዎች",
+  "unscheduledAppointments_lower": "ያልታቀዱ ቀጠሮዎች",
+  "upcoming": "መጪ",
+  "upcomingAppointments": "መጪ ቀጠሮዎች",
+  "updateError": "መጪ ቀጠሮን በማዘመን ላይ ስህተት",
+  "view": "እይታ",
+  "vitals": "ቪታል",
+  "week": "ሳምንት",
+  "yes": "አዎ"
 }
