--- a/packages/esm-patient-search-app/translations/am.json
+++ b/packages/esm-patient-search-app/translations/am.json
@@ -1,48 +1,88 @@
 {
-  "age": "Age",
-  "any": "Any",
-  "apply": "Apply",
-  "clear": "Clear",
-  "clearSearch": "Clear",
-  "closeSearch": "Close Search Panel",
-  "countOfFiltersApplied_one": "{{count}} filters applied",
-  "countOfFiltersApplied_other": "{{count}} filters applied",
-  "dayOfBirth": "Day of Birth",
-  "error": "Error",
-  "errorCopy": "Sorry, there was an error. You can try to reload this page, or contact the site administrator and quote the error code above.",
-  "errorFetchingPatients": "Error fetching patients",
-  "errorFetchingUserProperties": "Error fetching user properties",
-  "errorLoadingAttribute": "Error loading attribute type {{attributeUuid}}",
-  "errorLoadingConceptAttributeAnswers": "Error loading concept attribute answers",
-  "errorLoadingLocationsForAttribute": "Error loading locations for person attribute {{attributeName}}",
-  "errorUpdatingRecentlyViewedPatients": "Error updating recently viewed patients",
-  "female": "Female",
-  "filtersAppliedText": "search queries added",
-  "male": "Male",
-  "monthOfBirth": "Month of Birth",
-  "nextPage": "Next page",
-  "noPatientChartsFoundMessage": "Sorry, no patient charts were found",
-  "other": "Other",
-  "postcode": "Postcode",
-  "previousPage": "Previous page",
-  "recentSearchResultsCount_one": "{{count}} recent search result",
-  "recentSearchResultsCount_other": "{{count}} recent search results",
-  "refineSearch": "Refine search",
-  "refineSearchHeaderText": "Add additional search criteria",
-  "refineSearchTabletBannerText": "Can't find who you're looking for?",
-  "resetFields": "Reset fields",
-  "search": "Search",
-  "searchForPatient": "Search for a patient by name or identifier number",
-  "searchingText": "Searching...",
-  "searchLocationPersonAttribute": "Search location",
-  "searchPatient": "Search patient",
-  "searchResults": "Search results",
-  "searchResultsCount_one": "{{count}} search result",
-  "searchResultsCount_other": "{{count}} search results",
-  "selectOption": "Select an option",
-  "sex": "Sex",
-  "trySearchWithPatientUniqueID": "Try to search again using the patient's unique ID number",
-  "unknown": "Unknown",
-  "unsupportedAttributeFormat": "Unsupported attribute format: {{format}}",
-  "yearOfBirth": "Year of Birth"
+  "age": "ዕድሜ",
+  "any": "ማንኛውም",
+  "apply": "ተግብር",
+  "cancel": "ይቅር",
+  "clear": "አጽዳ",
+  "clearSearch": "አጽዳ",
+  "closeSearch": "የፍለጋ ፓነል ዝጋ",
+  "continueToChart": "ወደ ቻርት ቀጥል",
+  "countOfFiltersApplied_one": "{{count}} ማጣሪያ ተተግብሯል",
+  "countOfFiltersApplied_other": "{{count}} ማጣሪያዎች ተተግብረዋል",
+  "dayOfBirth": "የትውልድ ቀን",
+  "differencesFound": "ልዩነቶች ተገኝተዋል",
+  "differencesFoundSubtitle": "በስርዓታችን ውስጥ ያለው የታካሚ መረጃ ከHIE መዝገብ የተለየ ነው። እባክዎ ከመቀጠልዎ በፊት እነዚህን ልዩነቶች ይገምግሙ፣ የማመሳሰል ስራውን ከቀጠሉ፣ በስርዓታችን ውስጥ ያለው የታካሚ መረጃ ከHIE መዝገብ ጋር እንዲመሳሰል ይዘምናል። ወደ ታካሚ ቻርት ለመቀጠል ከመረጡ፣ ወደ ታካሚ ቻርት ይዛወራሉ። የማመሳሰል ስራውን አንቀጥልም።",
+  "error": "ስህተት",
+  "errorCopy": "ይቅርታ፣ ስህተት ተከስቷል። ይህን ገጽ እንደገና ለመጫን መሞከር ወይም የጣቢያ አስተዳዳሪውን ማግኘት እና ከላይ ያለውን የስህተት ኮድ መጥቀስ ይችላሉ።",
+  "errorFetchingPatients": "ታካሚዎችን በማግኘት ላይ ስህተት",
+  "errorFetchingUserProperties": "የተጠቃሚ ንብረቶችን በማግኘት ላይ ስህተት",
+  "errorLoadingAttribute": "የባህሪ አይነት {{attributeUuid}} በመጫን ላይ ስህተት",
+  "errorLoadingConceptAttributeAnswers": "የጽንሰ-ሀሳብ ባህሪ መልሶችን በመጫን ላይ ስህተት",
+  "errorLoadingLocationsForAttribute": "ለሰው ባህሪ {{attributeName}} ቦታዎችን በመጫን ላይ ስህተት",
+  "errorUpdatingRecentlyViewedPatients": "በቅርብ ጊዜ የታዩ ታካሚዎችን በማዘመን ላይ ስህተት",
+  "faulureVerifyingPatient": "ማረጋገጫ አልተሳካም። ታካሚ የስልክ ቁጥር የለውም። እባክዎ ታካሚው ዝርዝሮቻቸውን በአፍያ ያንጉ እንዲያዘምኑ እና እንደገና እንዲሞክሩ ይመክሩ።",
+  "female": "ሴት",
+  "filtersAppliedText": "የፍለጋ ጥያቄዎች ታክለዋል",
+  "hie": "HIE",
+  "hieErrorSubtitle": "ከHIE የታካሚ መረጃ በሚያገኙበት ጊዜ ስህተት",
+  "hieErrorTitle": "HIE የታካሚ መረጃ ስህተት",
+  "hiePatient": "HIE ታካሚ",
+  "hiePatientNotFoundSubtitle": "እባክዎ መለያውን ያረጋግጡ እና እንደገና ይሞክሩ፣ ታካሚው ካልተገኘ፣ እባክዎ ታካሚው ከማህበራዊ ጤና ባለስልጣን (SHA) ጋር እንዲመዘገብ ይመክሩ።",
+  "hiePatientNotFoundTitle": "HIE የታካሚ መረጃ አልተገኘም።",
+  "invalidOtp": "ትክክል ያልሆነ OTP። እባክዎ ያረጋግጡ እና እንደገና ይሞክሩ።",
+  "localPatient": "የአካባቢ ታካሚ",
+  "male": "ወንድ",
+  "monthOfBirth": "የትውልድ ወር",
+  "nextPage": "ቀጣይ ገጽ",
+  "noDependentsFoundMessage": "ይቅርታ፣ ምንም ጥገኞች አልተገኙም።",
+  "noPatientChartsFoundMessage": "ይቅርታ፣ ምንም የታካሚ ቻርቶች አልተገኙም።",
+  "other": "ሌላ",
+  "otp": "OTP",
+  "otpSendFailed": "OTP መላክ አልተሳካም።",
+  "otpSendFailedSubtitle": "እባክዎ OTP ለማግኘት ስልክዎን ያረጋግጡ",
+  "otpSent": "OTP ተልኳል",
+  "otpSentSubtitle": "እባክዎ OTP ለማግኘት ስልክዎን ያረጋግጡ",
+  "otpVerification": "OTP ማረጋገጫ",
+  "patientCreated": "ታካሚ ተፈጥሯል",
+  "patientCreatedSubtitle": "ታካሚ በተሳካ ሁኔታ ተፈጥሯል",
+  "patientInformationSync": "የታካሚ መረጃ ማመሳሰል",
+  "patientSaveFailed": "ታካሚ ማስቀመጥ አልተሳካም።",
+  "patientSaveFailedSubtitle": "ታካሚ ማስቀመጥ አልተሳካም።",
+  "patientUpdated": "ታካሚ ዘምኗል",
+  "patientUpdatedSubtitle": "ታካሚ በተሳካ ሁኔታ ዘምኗል",
+  "phoneNumber": "ስልክ ቁጥር",
+  "phoneNumberInvalid": "እባክዎ ትክክለኛ ስልክ ቁጥር ያስገቡ",
+  "postcode": "የፖስታ ኮድ",
+  "previousPage": "የቀደመው ገጽ",
+  "proceedToPatientChart": "ወደ ታካሚ ቻርት ቀጥል",
+  "recentSearchResultsCount_one": "{{count}} የቅርብ ጊዜ የፍለጋ ውጤት",
+  "recentSearchResultsCount_other": "{{count}} የቅርብ ጊዜ የፍለጋ ውጤቶች",
+  "refineSearch": "ፍለጋን አጥራ",
+  "refineSearchHeaderText": "ተጨማሪ የፍለጋ መስፈርቶችን ጨምር",
+  "refineSearchTabletBannerText": "የሚፈልጉትን ሰው ማግኘት አልቻሉም?",
+  "registerDependentsWithSHA": "ጥገኞችን ለመፈለግ ከSHA ጋር ይመዝገቡ",
+  "requestOtp": "OTP ጠይቅ",
+  "resendOtp": "OTP እንደገና ላክ",
+  "resetFields": "መስኮችን ዳግም አስጀምር",
+  "saving": "በማስቀመጥ ላይ...",
+  "search": "ፈልግ",
+  "searchForPatient": "ታካሚን በስም ወይም በመለያ ቁጥር ፈልግ",
+  "searchingText": "በመፈለግ ላይ...",
+  "searchLocationPersonAttribute": "ቦታ ፈልግ",
+  "searchPatient": "ታካሚ ፈልግ",
+  "searchResults": "የፍለጋ ውጤቶች",
+  "searchResultsCount_one": "{{count}} የፍለጋ ውጤት",
+  "searchResultsCount_other": "{{count}} የፍለጋ ውጤቶች",
+  "selectIdentifierTypeHelperText": "HIE መዝገብ ፍለጋ ለማከናወን የመለያ አይነት ይምረጡ",
+  "selectOption": "አማራጭ ይምረጡ",
+  "sending": "በመላክ ላይ...",
+  "sex": "ጾታ",
+  "syncAndContinueToChart": "አመሳክር እና ወደ ቻርት ቀጥል",
+  "syncError": "የማመሳሰል ስህተት",
+  "syncErrorSubtitle": "ታካሚውን በሚያመሳስሉበት ጊዜ ስህተት ተከስቷል",
+  "trySearchFromClientRegistry": "የታካሚውን ልዩ መታወቂያ ቁጥር በመጠቀም ለመፈለግ ይሞክሩ ወይም የHIE መዝገብን ይፈልጉ",
+  "trySearchWithPatientUniqueID": "የታካሚውን ልዩ መታወቂያ ቁጥር በመጠቀም እንደገና ለመፈለግ ይሞክሩ",
+  "unknown": "ያልታወቀ",
+  "unsupportedAttributeFormat": "ያልተደገፈ የባህሪ ቅርጸት: {{format}}",
+  "yearOfBirth": "የትውልድ ዓመት"
 }
