--- a/packages/esm-patient-search-app/translations/en.json
+++ b/packages/esm-patient-search-app/translations/en.json
@@ -43,6 +43,8 @@
   "otpSent": "OTP Sent",
   "otpSentSubtitle": "Please check your phone for the OTP",
   "otpVerification": "OTP Verification",
+  "patientCreated": "Patient Created",
+  "patientCreatedSubtitle": "Patient has been successfully created",
   "patientInformationSync": "Patient Information Sync",
   "patientSaveFailed": "Failed to save patient",
   "patientSaveFailedSubtitle": "",
@@ -76,6 +78,8 @@
   "sending": "Sending...",
   "sex": "Sex",
   "syncAndContinueToChart": "Sync and Continue to Chart",
+  "syncError": "Sync Error",
+  "syncErrorSubtitle": "An error occurred while syncing the patient",
   "trySearchFromClientRegistry": "Try searching using the patient's unique ID number or search the HIE Registry",
   "trySearchWithPatientUniqueID": "Try to search again using the patient's unique ID number",
   "unknown": "Unknown",
