--- a/packages/esm-bed-management-app/translations/am.json
+++ b/packages/esm-bed-management-app/translations/am.json
@@ -1,67 +1,67 @@
 {
-  "actions": "Actions",
-  "addBed": "Add bed",
-  "addBedTag": "Create bed tag",
-  "addBedType": "Add bed type",
-  "allocationStatus": "Allocated",
-  "bedDescription": "Bed description",
-  "bedId": "Bed ID",
-  "bedLocation": "Location",
-  "bedManagement": "Bed management",
-  "bedManagementLeftPanel": "Bed management left panel",
-  "bedName": "Bed name",
-  "bedNumber": "Bed number",
-  "beds": "Beds",
-  "bedTagCreated": "Bed tag created",
-  "bedTagCreatedSuccessfully": "",
-  "bedTagPlaceholder": "",
-  "bedTags": "Bed tags",
-  "bedTagUpdated": "Bed tag updated",
-  "bedTagUpdatedSuccessfully": "",
-  "bedTypeCreated": "Bed type created",
-  "bedTypeCreatedSuccessfully": "",
-  "bedTypePlaceholder": "",
-  "bedTypes": "Bed types",
-  "bedTypeUpdated": "Bed type updated",
-  "bedTypeUpdatedSuccessfully": "",
-  "bedUpdated": "Bed updated",
-  "bedUpdatedSuccessfully": "",
-  "checkFilters": "Check the filters above",
-  "chooseBedtype": "Choose a bed type",
-  "chooseOccupiedStatus": "Choose occupied status",
-  "createBedTag": "Create bed tag",
-  "createBedType": "Create bed type",
-  "createNewBed": "Create a new bed",
-  "description": "Description",
-  "displayName": "Display name",
-  "displayNamePlaceholder": "",
-  "editBed": "Edit bed",
-  "editBedTag": "Edit Bed Tag",
-  "editBedType": "Edit bed type",
-  "editTag": "Edit Tag",
-  "enterBedDescription": "Enter the bed description",
-  "enterBedNumber": "e.g. BMW-201",
-  "error": "Error",
-  "errorCreatingBedTag": "Error creating bed tag",
-  "errorCreatingForm": "Error creating bed",
-  "errorFetchingbedInformation": "Error fetching bed information",
-  "filterByOccupancyStatus": "Filter by occupancy status",
-  "ids": "Id",
-  "location": "Location",
-  "manageBeds": "Manage beds",
-  "name": "Name",
-  "newBedCreated": "New bed created",
-  "no": "No",
-  "No data": "No data to display",
-  "noDataToDisplay": "No data to display",
-  "occupancyStatus": "Occupied",
-  "or": "or",
-  "pleaseFillField": "",
-  "required": "Required",
-  "save": "Save",
-  "selectBedLocation": "Select a bed location",
-  "summary": "Summary",
-  "viewBeds": "View beds",
-  "wardAllocation": "Ward allocation",
-  "yes": "Yes"
+  "actions": "እርምጃዎች",
+  "addBed": "አልጋ ጨምር",
+  "addBedTag": "የአልጋ መለያ ፍጠር",
+  "addBedType": "የአልጋ አይነት ጨምር",
+  "allocationStatus": "ተመድቧል",
+  "bedDescription": "የአልጋ መግለጫ",
+  "bedId": "የአልጋ መታወቂያ",
+  "bedLocation": "ቦታ",
+  "bedManagement": "የአልጋ አስተዳደር",
+  "bedManagementLeftPanel": "የአልጋ አስተዳደር ግራ ፓነል",
+  "bedName": "የአልጋ ስም",
+  "bedNumber": "የአልጋ ቁጥር",
+  "beds": "አልጋዎች",
+  "bedTagCreated": "የአልጋ መለያ ተፈጥሯል",
+  "bedTagCreatedSuccessfully": "የአልጋ መለያ በተሳካ ሁኔታ ተፈጥሯል",
+  "bedTagPlaceholder": "የአልጋ መለያ አስገባ",
+  "bedTags": "የአልጋ መለያዎች",
+  "bedTagUpdated": "የአልጋ መለያ ተዘምኗል",
+  "bedTagUpdatedSuccessfully": "የአልጋ መለያ በተሳካ ሁኔታ ተዘምኗል",
+  "bedTypeCreated": "የአልጋ አይነት ተፈጥሯል",
+  "bedTypeCreatedSuccessfully": "የአልጋ አይነት በተሳካ ሁኔታ ተፈጥሯል",
+  "bedTypePlaceholder": "የአልጋ አይነት አስገባ",
+  "bedTypes": "የአልጋ ዓይነቶች",
+  "bedTypeUpdated": "የአልጋ አይነት ተዘምኗል",
+  "bedTypeUpdatedSuccessfully": "የአልጋ አይነት በተሳካ ሁኔታ ተዘምኗል",
+  "bedUpdated": "አልጋ ተዘምኗል",
+  "bedUpdatedSuccessfully": "አልጋ በተሳካ ሁኔታ ተዘምኗል",
+  "checkFilters": "ከላይ ያሉትን ማጣሪያዎች ያረጋግጡ",
+  "chooseBedtype": "የአልጋ አይነት ይምረጡ",
+  "chooseOccupiedStatus": "የተያዘበትን ሁኔታ ይምረጡ",
+  "createBedTag": "የአልጋ መለያ ፍጠር",
+  "createBedType": "የአልጋ አይነት ፍጠር",
+  "createNewBed": "አዲስ አልጋ ፍጠር",
+  "description": "መግለጫ",
+  "displayName": "የማሳያ ስም",
+  "displayNamePlaceholder": "የማሳያ ስም አስገባ",
+  "editBed": "አልጋ አስተካክል",
+  "editBedTag": "የአልጋ መለያ አስተካክል",
+  "editBedType": "የአልጋ አይነት አስተካክል",
+  "editTag": "መለያ አስተካክል",
+  "enterBedDescription": "የአልጋውን መግለጫ ያስገቡ",
+  "enterBedNumber": "ለምሳሌ BMW-201",
+  "error": "ስህተት",
+  "errorCreatingBedTag": "የአልጋ መለያ በመፍጠር ላይ ስህተት",
+  "errorCreatingForm": "አልጋ በመፍጠር ላይ ስህተት",
+  "errorFetchingbedInformation": "የአልጋ መረጃ በመጫን ላይ ስህተት",
+  "filterByOccupancyStatus": "በመያዣ ሁኔታ አጣራ",
+  "ids": "መታወቂያ",
+  "location": "ቦታ",
+  "manageBeds": "አልጋዎችን አስተዳድር",
+  "name": "ስም",
+  "newBedCreated": "አዲስ አልጋ ተፈጥሯል",
+  "no": "አይ",
+  "No data": "የሚታይ መረጃ የለም",
+  "noDataToDisplay": "የሚታይ መረጃ የለም",
+  "occupancyStatus": "ተይዟል",
+  "or": "ወይም",
+  "pleaseFillField": "እባክዎ መስኩን ይሙሉ",
+  "required": "አስፈላጊ",
+  "save": "አስቀምጥ",
+  "selectBedLocation": "የአልጋ ቦታ ይምረጡ",
+  "summary": "ማጠቃለያ",
+  "viewBeds": "አልጋዎችን እይ",
+  "wardAllocation": "የዋርድ ምደባ",
+  "yes": "አዎ"
 }
