feat : support amharic config sections

--- a/packages/esm-patient-registration-app/translations/am.json
+++ b/packages/esm-patient-registration-app/translations/am.json
@@ -29,6 +29,7 @@
   "contactSection": "የእውቂያ ዝርዝሮች",
   "continue": "ወደ ምዝገባ ቀጥል",
   "createNewPatient": "አዲስ ታካሚ ፍጠር",
+  "customSection": "የስነ ሕዝብ አወቃቀር",
   "dateOfBirth": "የትውልድ ቀን",
   "dateOfBirthLabelText": "የትውልድ ቀን",
   "deathCauseRequired": "የሞት መንስኤ ያስፈልጋል",
@@ -95,6 +96,7 @@
   "nationalID": "ብሔራዊ መታወቂያ",
   "negativeMonths": "የተገመቱ ወራት አሉታዊ ሊሆኑ አይችሉም",
   "negativeYears": "የተገመቱ ዓመታት አሉታዊ ሊሆኑ አይችሉም",
+  "nextOfKinSection": "የኪን ዝርዝሮች ቀጣይ",
   "no": "አይ",
   "nonCodedCauseOfDeath": "ያልተመዘገበ የሞት መንስኤ",
   "nonCodedCauseOfDeathRequired": "የሞት መንስኤ ያስፈልጋል",
