--- a/packages/esm-patient-registration-app/translations/en.json
+++ b/packages/esm-patient-registration-app/translations/en.json
@@ -29,6 +29,7 @@
   "contactSection": "Contact Details",
   "continue": "Continue",
   "createNewPatient": "Create new patient",
+  "customSection": "Demographics",
   "dateOfBirth": "Date of birth",
   "dateOfBirthLabelText": "Date of birth",
   "deathCauseRequired": "Cause of death is required",
@@ -95,6 +96,7 @@
   "nationalID": "National ID",
   "negativeMonths": "Estimated months cannot be negative",
   "negativeYears": "Estimated years cannot be negative",
+  "nextOfKinSection": "Next of Kin",
   "no": "No",
   "nonCodedCauseOfDeath": "Non-coded cause of death",
   "nonCodedCauseOfDeathRequired": "Cause of death is required",
