(feat): Launch start visit workspace after patient registration and navigate to chart after editing

--- a/packages/esm-patient-registration-app/translations/am.json
+++ b/packages/esm-patient-registration-app/translations/am.json
@@ -11,6 +11,7 @@
   "birthFieldLabelText": "የትውልድ",
   "cancel": "ይቅር",
   "causeOfDeathInputLabel": "የሞት መንስኤ",
+  "checkInPatientWorkspaceTitle": "Check in patient",
   "clientRegistryEmpty": "ታካሚ ፍጠር እና አስገባ",
   "clientRegistryEmptys": "ታካሚ ፍጠር",
   "clientRegistryError": "የደንበኛ መዝገብን በሚያገኙበት ጊዜ ስህተት ተከስቷል",
