(BREAKING)  Migrate from webpack to rspack for bundling

--- a/packages/esm-ward-app/translations/am.json
+++ b/packages/esm-ward-app/translations/am.json
@@ -10,8 +10,6 @@
   "bedSwap": "አልጋ መቀየር",
   "cancel": "ይቅር",
   "cancelAdmissionRequest": "የመግቢያ ጥያቄ ሰርዝ",
-  "capacity": "አቅም",
-  "capacityMetricValue": "{{ metricValue }} %",
   "chooseAnOption": "አማራጭ ይምረጡ",
   "clinicalForms": "ክሊኒካዊ ቅጾች",
   "clinicalNoteLabel": "ማስታወሻዎችዎን ይጻፉ",
@@ -21,25 +19,18 @@
   "discharge": "አስወጣ",
   "emptyBed": "ባዶ አልጋ",
   "emptyText": "ባዶ",
-  "encounterDisplay": "{{encounterType}} {{encounterDate}}",
   "Error cancelling admission request": "የመግቢያ ጥያቄን በሚሰርዙበት ጊዜ ስህተት",
   "errorChangingPatientBedAssignment": "የታካሚ አልጋ ምደባን በመቀየር ላይ ስህተት",
-  "errorConfiguringPatientCard": "የታካሚ ካርድን በማዋቀር ላይ ስህተት",
-  "errorConfiguringPatientCardMessage": "ለ{{elementType}}፣ መታወቂያ: {{id}} ውቅር ማግኘት አልተቻለም",
   "errorCreatingEncounter": "ታካሚ ማስገባት አልተሳካም።",
   "errorCreatingTransferRequest": "የማስተላለፊያ ጥያቄ በመፍጠር ላይ ስህተት",
   "errorDischargingPatient": "ታካሚን በማስወጣት ላይ ስህተት",
   "errorLoadingBedDetails": "የአልጋ ዝርዝሮችን በመጫን ላይ ስህተት",
-  "errorLoadingChildren": "የህጻናትን መረጃ በመጫን ላይ ስህተት",
-  "errorLoadingMother": "የእናት መረጃ በመጫን ላይ ስህተት",
   "errorLoadingPatientAdmissionRequests": "የታካሚ መግቢያ ጥያቄዎችን በመጫን ላይ ስህተት",
   "errorLoadingPatients": "የገቡ ታካሚዎችን በመጫን ላይ ስህተት",
   "errorLoadingWardLocation": "የዋርድ ቦታን በመጫን ላይ ስህተት",
   "female": "ሴት",
   "fetchingEmrConfigurationFailed": "የEMR ውቅር ማምጣት አልተሳካም። ገጹን እንደገና ለመጫን ይሞክሩ ወይም የስርዓት አስተዳዳሪዎን ያግኙ።",
   "fetchingPatientNotesFailed": "የታካሚ ማስታወሻዎችን ማምጣት አልተሳካም። ገጹን እንደገና ለመጫን ይሞክሩ ወይም የስርዓት አስተዳዳሪዎን ያግኙ።",
-  "freeBeds": "ነጻ አልጋዎች",
-  "freeBedsMetricValue": "{{ metricValue }}",
   "inpatientNotesWorkspaceTitle": "የሆስፒታል ታካሚ ማስታወሻዎች",
   "invalidLocationSpecified": "ትክክል ያልሆነ ቦታ ተገልጿል",
   "invalidWardLocation": "ትክክል ያልሆነ የዋርድ ቦታ: {{location}}",
@@ -56,23 +47,21 @@
   "notesRequiredForCancellingRequest": "ጥያቄን ለመሰረዝ ወይም ለማስተላለፍ ማስታወሻዎች ያስፈልጋሉ",
   "Orders": "ትዕዛዞች",
   "other": "ሌላ",
+  "Patient": "patient",
   "patientAdmittedButBedNotAssigned": "ታካሚ በተሳካ ሁኔታ ገብቷል ነገር ግን ለአልጋ መመደብ አልተሳካም።",
   "patientAdmittedSuccessfully": "ታካሚ በተሳካ ሁኔታ ገብቷል",
   "patientAdmittedSuccessfullySubtitle": "{{patientName}} በተሳካ ሁኔታ ገብቷል እና ለአልጋ {{bedNumber}} ተመድቧል",
   "patientAdmittedWoBed": "ታካሚ በተሳካ ሁኔታ ወደ {{location}} ገብቷል",
   "patientAssignedNewBed": "ታካሚ ለአዲስ አልጋ ተመድቧል",
   "patientAssignedNewBedDetail": "{{patientName}} ለአልጋ {{bedNumber}} ተመድቧል",
+  "PatientNote": "Patient Note",
   "patientNoteNowVisible": "አሁን በማስታወሻዎች ታሪክ ውስጥ መታየት አለበት",
   "patientNoteSaveError": "የታካሚ ማስታወሻን በማስቀመጥ ላይ ስህተት",
   "patientNotesDidntLoad": "የታካሚ ማስታወሻዎች አልተጫኑም።",
-  "patients": "ታካሚዎች",
-  "patientsMetricValue": "{{ metricValue }}",
   "patientTransferRequestCreated": "የታካሚ ማስተላለፊያ ጥያቄ ተፈጥሯል",
   "patientUnassignedFromBed": "ታካሚ ከአልጋ ተወግዷል",
   "patientUnassignedFromBedDetail": "{{patientName}} አሁን ከአልጋ ተወግዷል",
   "patientWasDischarged": "ታካሚ ወጥቷል",
-  "pendingOut": "በመጠባበቅ ላይ",
-  "pendingOutMetricValue": "{{ metricValue }}",
   "pleaseSelectBed": "እባክዎ አልጋ ይምረጡ",
   "pleaseSelectTransferLocation": "እባክዎ የማስተላለፊያ ቦታ ይምረጡ",
   "pleaseSelectTransferType": "እባክዎ የማስተላለፊያ አይነት ይምረጡ",
