--- a/packages/esm-ward-app/translations/en.json
+++ b/packages/esm-ward-app/translations/en.json
@@ -10,8 +10,6 @@
   "bedSwap": "Bed swap",
   "cancel": "Cancel",
   "cancelAdmissionRequest": "Cancel admission request",
-  "capacity": "Capacity",
-  "capacityMetricValue": "{{ metricValue }} %",
   "chooseAnOption": "Choose an option",
   "clinicalForms": "Clinical forms",
   "clinicalNoteLabel": "Write your notes",
@@ -21,25 +19,18 @@
   "discharge": "Discharge",
   "emptyBed": "Empty bed",
   "emptyText": "Empty",
-  "encounterDisplay": "{{encounterType}} {{encounterDate}}",
   "Error cancelling admission request": "Error cancelling admission request",
   "errorChangingPatientBedAssignment": "Error changing patient bed assignment",
-  "errorConfiguringPatientCard": "Error configuring patient card",
-  "errorConfiguringPatientCardMessage": "Unable to find configuration for {{elementType}}, id: {{id}}",
   "errorCreatingEncounter": "Failed to admit patient",
   "errorCreatingTransferRequest": "Error creating transfer request",
   "errorDischargingPatient": "Error discharging patient",
   "errorLoadingBedDetails": "Error loading bed details",
-  "errorLoadingChildren": "Error loading children info",
-  "errorLoadingMother": "Error loading mother info",
   "errorLoadingPatientAdmissionRequests": "Error loading patient admission requests",
   "errorLoadingPatients": "Error loading admitted patients",
   "errorLoadingWardLocation": "Error loading ward location",
   "female": "Female",
   "fetchingEmrConfigurationFailed": "Fetching EMR configuration failed. Try refreshing the page or contact your system administrator.",
   "fetchingPatientNotesFailed": "Fetching patient notes failed. Try refreshing the page or contact your system administrator.",
-  "freeBeds": "Free beds",
-  "freeBedsMetricValue": "{{ metricValue }}",
   "inpatientNotesWorkspaceTitle": "In-patient notes",
   "invalidLocationSpecified": "Invalid location specified",
   "invalidWardLocation": "Invalid ward location: {{location}}",
@@ -56,23 +47,21 @@
   "notesRequiredForCancellingRequest": "Notes required for cancelling admission or transfer request",
   "Orders": "Orders",
   "other": "Other",
+  "Patient": "patient",
   "patientAdmittedButBedNotAssigned": "Patient admitted successfully but fail to assign bed to patient",
   "patientAdmittedSuccessfully": "Patient admitted successfully",
   "patientAdmittedSuccessfullySubtitle": "{{patientName}} has been successfully admitted and assigned to bed {{bedNumber}}",
   "patientAdmittedWoBed": "Patient admitted successfully to {{location}}",
   "patientAssignedNewBed": "Patient assigned to new bed",
   "patientAssignedNewBedDetail": "{{patientName}} assigned to bed {{bedNumber}}",
+  "PatientNote": "Patient Note",
   "patientNoteNowVisible": "It should be now visible in the notes history",
   "patientNoteSaveError": "Error saving patient note",
   "patientNotesDidntLoad": "Patient notes didn't load",
-  "patients": "Patients",
-  "patientsMetricValue": "{{ metricValue }}",
   "patientTransferRequestCreated": "Patient transfer request created",
   "patientUnassignedFromBed": "Patient unassigned from bed",
   "patientUnassignedFromBedDetail": "{{patientName}} is now unassigned from bed",
   "patientWasDischarged": "Patient was discharged",
-  "pendingOut": "Pending out",
-  "pendingOutMetricValue": "{{ metricValue }}",
   "pleaseSelectBed": "Please select a bed",
   "pleaseSelectTransferLocation": "Please select transfer location",
   "pleaseSelectTransferType": "Please select transfer type",
